base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapp-backend
  template:
    metadata:
      labels:
        app: todoapp-backend
    spec:
      serviceAccountName: backend-sa
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: todoapp-backend
          image: asia-northeast1-docker.pkg.dev/phu-le-it/todoapp-repository/todoapp-backend:1.0.9
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command:
            - /cloud_sql_proxy
            - -instances=phu-le-it:asia-northeast1:todoapp-bd270f2b=tcp:3306
          securityContext:
            runAsUser: 2
            allowPrivilegeEscalation: false
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-backend-service
  labels:
    app: todoapp-backend
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-http-hc-config"}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: todoapp-backend
