base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /apis/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
